# octopus-automl

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  properdocs.yml  pydoclint.toml  pyproject.toml  ruff.toml  sitemap.xml  test_like_ci.sh
.github/workflows/: docs.yml  release.yml  ruff.yml  test-examples.yml  test-package.yml
changelog/: index.html
codemain/: __init__.py
concepts/concepts/: index.html
concepts/feature_importance/: index.html
concepts/nested_cv/: index.html
concepts/terminology/: index.html
concepts/understanding_results/: index.html
concepts/workflow/: index.html
contributing/: index.html
contributors/: index.html
docs/: faq.md  getting_started.md  index.md
docs/assets/: extra.css
docs/concepts/: concepts.md  feature_importance.md  nested_cv.md  terminology.md  understanding_results.md
docs/diagnostics/: SUMMARY.md  analyse_study_classification.md  diagnostics_octo_classification.md  diagnostics_octo_regression.md
docs/reference/: diagnostics.md  feature_importance.md  poststudy.md  predict.md
docs/scripts/: generate_examples.py
docs/userguide/: classification.md  health_check.md  output_structure.md  regression.md  time_to_event.md  userguide.md
examples/: analyse_study_classification.ipynb  analysis_classification.ipynb  analysis_example_study.py  analysis_regression.ipynb  analysis_timetoevent.ipynb  basic_classification.ipynb  basic_classification.py  basic_regression.ipynb  basic_regression.py  basic_timetoevent.ipynb  basic_timetoevent.py  check_data_quality.py  custom_hyperparameters.py  data_health_check.py  diagnostics_classification.ipynb  diagnostics_octo.ipynb  diagnostics_octo.ipynb.backup  diagnostics_octo_classification.ipynb  diagnostics_octo_regression.ipynb  diagnostics_regression.ipynb  feature_filtering.py  multi_workflow.ipynb  multi_workflow.py  multiclass_classification.py  parallel_classification_workflow.py  predict_new_data.ipynb  sequential_classification_workflow.py  sequential_regression_workflow.py  small_data_promoters_classification.py  small_data_sonar_classification.py  small_data_spectf_classification.py  small_data_tecator_regression.py  use_own_hyperparameters.ipynb  use_own_hyperparameters.py  wf_multi_step_classification.ipynb  wf_multi_step_classification.py  wf_multi_step_regression.ipynb  wf_multi_step_regression.py  wf_multiclass_wine.ipynb  wf_multiclass_wine.py  (+6 more)
examples/analyse_study_classification/: index.html
examples/basic_classification/: index.html
examples/basic_regression/: index.html
examples/basic_timetoevent/: index.html
examples/diagnostics_octo_classification/: index.html
examples/diagnostics_octo_regression/: index.html
examples/multi_workflow/: index.html
examples/use_own_hyperparameters/: index.html
examples/wf_multi_step_classification/: index.html
examples/wf_multi_step_regression/: index.html
examples/wf_multiclass_wine/: index.html
examples/wf_octo_autogluon/: index.html
examples/wf_octo_mrmr_octo/: index.html
examples/wf_roc_octo/: index.html
faq/: index.html
getting_started/: index.html
license/: index.html
maincode/: notebook_utils.py
octopus/: __init__.py  datasplit.py  example_data.py  exceptions.py  experiment.py  feature_importance.py  logger.py  types.py  utils.py
octopus/_optional/: autogluon.py
octopus/analysis/: __init__.py  loaders.py  module_loader.py  notebook_utils.py  plots.py  tables.py  test_evaluator.py
octopus/diagnostics/: __init__.py  _data_loader.py  _plots.py  core.py
octopus/manager/: __init__.py  core.py  execution.py  parallel_resources.py  ray_parallel.py  workflow_runner.py
octopus/metrics/: classification.py  config.py  core.py  multiclass.py  regression.py  timetoevent.py  utils.py
octopus/models/: __init__.py  classification_models.py  config.py  core.py  model_name.py  regression_models.py  time_to_event_models.py
octopus/modules/: __init__.py  base.py  context.py  predictor.py  result.py  utils.py
octopus/poststudy/: __init__.py  base_predictor.py  feature_importance.py  notebook.py  plots.py  study_io.py  tables.py  task_evaluator_test.py  task_predictor.py
octopus/predict/: __init__.py  core.py  feature_importance.py  notebook_utils.py  predictor.py  study_io.py  task_predictor.py  task_predictor_test.py
octopus/study/: __init__.py  context.py  core.py  data_checker.py  data_preparation.py  data_preparator.py  data_validation.py  data_validator.py  healthChecker.py  prepared_data.py  types.py  validation.py
post_study_analysis/SUMMARY/: index.html
post_study_analysis/analysis_classification/: index.html
post_study_analysis/analysis_regression/: index.html
post_study_analysis/analysis_timetoevent/: index.html
predictions/SUMMARY/: index.html
predictions/predict_new_data/: index.html
reference/diagnostics/: index.html
reference/manager/: index.html
reference/metrics/: index.html
reference/models/: index.html
reference/modules/: index.html
reference/poststudy/: index.html
reference/predict/: index.html
reference/reference/: index.html
reference/study/: index.html
scripts/: generate_examples.py
search/: search_index.json
specifications/: 01_overview.md  02_architecture.md  03_study_io.md  04_feature_importance.md  05_task_predictor_api.md  06_implementation.md  07_review_findings.md  08_branch_issues.md  09_analysis.md  10_metrics_strategy.md  11_version_stability.md  12_clean_design.md  13_evaluation_and_predict_refactoring.md
tests/: conftest.py  helpers.py  test_analysis.py  test_datasplit.py  test_examples.py  test_feature_importance_primitives.py  test_predict.py
tests/manager/: test_core.py  (+1 more)
(+143 files in other folders)
